syntax = "proto3";

option go_package = "dmbb.com/go2/kitchen/kitchenorders";

package kitchenorders;

message NewOrderItem {
  string dishName = 1;
  int32 quantity = 2;
}

message PutNewOrderRequest {
  int32 orderId = 1;
  repeated NewOrderItem items = 2;
}

message PutNewOrderResponse {
  string status = 1;
}

service KitchenOrdersService {
  rpc PutNewOrder(PutNewOrderRequest) returns (PutNewOrderResponse) {}
}